# ChernoCraft

./: CMakeLists.txt
src/: game.cpp  game.h  input.cpp  input.h  main.cpp
src/entity/: entity.cpp  entity.h  player.cpp  player.h
src/graphics/: screen.cpp  screen.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
src/level/: block.cpp  block.h  level.cpp  level.h
src/level/block/: air_block.cpp  air_block.h  block.cpp  block.h  dirt.cpp  dirt_block.cpp  dirt_block.h  stone.cpp  stone.h  stone_block.cpp  stone_block.h
src/utils/: fileutils.h  glm.h
